# hes-vm

./: .gitignore  README.md  flake.nix  justfile
docs/notizen/: codegen.md
gui/: Cargo.toml
gui/src/: data.rs  lib.rs  main.rs
lib/: .gitignore  BytecodeBuilder.java  FunctionType.java  Main.java  WasmBuilder.java  WasmInstructionOpCode.java  WasmTypeOpCode.java  justfile  testfile.wasm
lib/wasmBuilder/: Func.java  FuncType.java  FunctionType.java  SectionId.java  WasmBuilder.java  WasmInstructionOpCode.java  WasmValueType.java
lib/wasm_builder_lib/: .project  README_dev_lib.md  settings.gradle
ref-project/: build.gradle  justfile  settings.gradle
ref-project/app/: build.gradle
src/: main.c
testfiles/: testfile1.wat  testfile1_simple.wat
vm/: .clang-tidy  .gitignore  Cargo.toml  _Cargo.toml  compile_commands.json  compile_commands2.json  compile_flags.txt  justfile
vm/cli/: Cargo.toml  hello_world.wat  justfile  test.c  test.wat
vm/cli/src/: main.rs  test.c
vm/console/: Cargo.toml  justfile
vm/docs/: wasm-subset.md
vm/interpreter/: Cargo.toml
vm/interpreter/src/: env.rs  lib.rs  slow_vm.rs  stack.rs  types.rs
vm/parser/: Cargo.toml  expanded.rs
vm/parser_derive/: Cargo.toml
vm/src/: _validation.rs  arena.c  arena.cpp  arena.h  arena.hpp  bytecode_info.rs  context.rs  core.hpp  interpreter.rs  io.c  io.cpp  io.h  io.hpp  leb128.c  leb128.cpp  leb128.h  leb128.hpp  lib.rs  main.c  main.cpp  mem.h  op.rs  os.h  os_impl_linux.cpp  os_linux.c  os_sdl.c  (+10 more)
vm_rust/: Cargo.toml
wasm_builder_lib/: .gitignore  README_dev_lib.md  settings.gradle
(+121 files in other folders)
