[package]
name = "wasm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
colored = "3"
parser = {path = "../parser/"} 
validator = {path = "../validator/"}
interpreter = {path = "../interpreter/"}
console = {path =  "../console/"}
clap = {version = "4.5.39", features = ["derive", "unicode"]}
itertools = "0.14.0"

