[package]
name = "wasm-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
byteorder = "1.5.0"
itertools = "0.14.0"
bytemuck = "1.23.0"
num-traits = "0.2.19"
smallvec = "1.15.0"
parser = {path = "../parser/"} 
validator = {path = "../validator/"}
[dev-dependencies]
wat = "1.227.1"

